reiterating the portfolio webpage project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="list-item">
                   <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Personal Portfolio Page</li>
+                  <li>Portfolio Webpage (<em>currently where you are</em>)</li>
                 </div>
               </ul>
             </div>
