added dynamic arrows, added preview for every available project, added bonus link at navbar, minor changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               <li><a href="#projects">Projects</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="#random-project" id="bonus">Bonus</a></li>
             </ul>
           </div>
         </nav>
@@ -58,16 +59,16 @@
               <h3>FreeCodeCamp Projects</h3>
               <ul class="project-list">
                 <div class="list-item">
-                  <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Survey Form</li>
+                  <i id="survey-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="./other-projects/survey-form/index.html" id="survey-link" target="_blank">Survey Form</a></li>
                 </div>
                 <div class="list-item">
-                  <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Tribute Page</li>
+                  <i id="tribute-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="./other-projects/tribute-page/index.html" id="tribute-link" target="_blank">Tribute Page</a></li>
                 </div>
                 <div class="list-item">
-                  <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Technical Documentation Page</li>
+                  <i id="tdp-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="./other-projects/technical-documentation-page/index.html" id="tdp-link" target="_blank">Technical Documentation Page</a></li>
                 </div>
               </ul>
             </div>
@@ -75,12 +76,12 @@
               <h3>Codecademy Projects</h3>
               <ul class="project-list">
                 <div class="list-item">
-                  <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Mixed Messages</li>
+                  <i id="mixed-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="https://github.com/JuanIsturiz/Mixed-Messages" id="mixed-link" target="_blank">Mixed Messages</a> (<em>only Js</em>)</li>
                 </div>
                 <div class="list-item">
-                  <i class="fa-solid fa-arrow-right-long"></i>
-                  <li>Portfolio Webpage (<em>currently where you are</em>)</li>
+                  <i id="portfolio-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="" id="portfolio-link" target="_blank">Portfolio Webpage</a> (<em>currently where you are</em>)</li>
                 </div>
               </ul>
             </div>
@@ -119,7 +120,7 @@
       <section id="random-project">
         <div class="random-project-container">
           <h2>Random Project</h2>
-          <p>Press the button to get one of my random projects.</p>
+          <p>Press the button to get one of my random project repositories.</p>
           <button id="random-project-button">Click me!</button>
         </div>
       </section>
