added new mixed messages files and fixed previous readme files from other projects

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                   <li><a href="https://github.com/JuanIsturiz/Mixed-Messages" id="mixed-link" target="_blank">Mixed Messages</a> (<em>only Js</em>)</li>
                 </div>
                 <div class="list-item">
+                  <i id="mixed-html-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li><a href="./other-projects/" id="mixed-html-link" target="_blank">Mixed Messages</a> (<em>with HTML included</em>)</li>
+                </div>
+                <div class="list-item">
                   <i id="portfolio-arrow" class="fa-solid fa-arrow-right-long"></i>
                   <li><a href="" id="portfolio-link" target="_blank">Portfolio Webpage</a> (<em>currently where you are</em>)</li>
                 </div>
