--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 </div>
                 <div class="list-item">
                   <i id="mixed-html-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="./other-projects/" id="mixed-html-link" target="_blank">Mixed Messages</a> (<em>with HTML included</em>)</li>
+                  <li><a href="./other-projects/mixed-messages-with-html/index.html" id="mixed-html-link" target="_blank">Mixed Messages</a> (<em>with HTML included</em>)</li>
                 </div>
                 <div class="list-item">
                   <i id="portfolio-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="" id="portfolio-link" target="_blank">Portfolio Webpage</a> (<em>currently where you are</em>)</li>
+                  <li><a href="" id="portfolio-link">Portfolio Webpage</a> (<em>currently where you are</em>)</li>
                 </div>
               </ul>
             </div>
