added alert when portfolio project is pressed

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                   <i id="mixed-html-arrow" class="fa-solid fa-arrow-right-long"></i>
                   <li><a href="./other-projects/mixed-messages-with-html/index.html" id="mixed-html-link" target="_blank">Mixed Messages</a> (<em>with HTML included</em>)</li>
                 </div>
-                <div class="list-item">
+                <div class="list-item" id="portfolio">
                   <i id="portfolio-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="" id="portfolio-link">Portfolio Webpage</a> (<em>currently where you are</em>)</li>
+                  <li><p id="portfolio-link">Portfolio Webpage</p> (<em>currently where you are</em>)</li>
                 </div>
               </ul>
             </div>
