added the product landing project

--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
             <div class="description">
               <h2>About Me</h2>
               <p>
-                Hello I'm Juan Isturiz AKA: Dunkelnn, im 23 years old, I'm a Software Engineer at the UBA from Venezuela. I'm currently learning how to become a fullstack engineer with the CodeCademy carrer path.
+                Hello I'm Juan Isturiz AKA: Dunkelnn, im 23 years old, I'm a
+                Software Engineer at the UBA from Venezuela. I'm currently
+                learning how to become a fullstack engineer with the CodeCademy
+                carrer path.
               </p>
               <p>
-                I choose this path because coding and being a web developer is what I'm most passionate about in terms of having a job. I like that everything it's possible with coding and customizing the way I like it's the best part.  
+                I choose this path because coding and being a web developer is
+                what I'm most passionate about in terms of having a job. I like
+                that everything it's possible with coding and customizing the
+                way I like it's the best part.
               </p>
               <p>
-                Besides my personal liking, coding is a challenge for me, it forces me to think beyond my knowledge and search for new stuff that I need to learn as I progress with my path.
+                Besides my personal liking, coding is a challenge for me, it
+                forces me to think beyond my knowledge and search for new stuff
+                that I need to learn as I progress with my path.
               </p>
             </div>
             <img
@@ -60,16 +68,52 @@
               <ul class="project-list">
                 <div class="list-item">
                   <i id="survey-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="./other-projects/survey-form/index.html" id="survey-link" target="_blank">Survey Form</a></li>
+                  <li>
+                    <a
+                      href="./other-projects/survey-form/index.html"
+                      id="survey-link"
+                      target="_blank"
+                      >Survey Form</a
+                    >
+                  </li>
                 </div>
                 <div class="list-item">
-                  <i id="tribute-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="./other-projects/tribute-page/index.html" id="tribute-link" target="_blank">Tribute Page</a></li>
+                  <i
+                    id="tribute-arrow"
+                    class="fa-solid fa-arrow-right-long"
+                  ></i>
+                  <li>
+                    <a
+                      href="./other-projects/tribute-page/index.html"
+                      id="tribute-link"
+                      target="_blank"
+                      >Tribute Page</a
+                    >
+                  </li>
                 </div>
                 <div class="list-item">
                   <i id="tdp-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="./other-projects/technical-documentation-page/index.html" id="tdp-link" target="_blank">Technical Documentation Page</a></li>
+                  <li>
+                    <a
+                      href="./other-projects/technical-documentation-page/index.html"
+                      id="tdp-link"
+                      target="_blank"
+                      >Technical Documentation Page</a
+                    >
+                  </li>
                 </div>
+                <div class="list-item">
+                  <i id="plp-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li>
+                    <a
+                      href="./other-projects/product-landing-page/index.html"
+                      id="plp-link"
+                      target="_blank"
+                      >Product Landing Page</a
+                    >
+                  </li>
+                </div>
+
               </ul>
             </div>
             <div class="list-container">
@@ -77,15 +121,40 @@
               <ul class="project-list">
                 <div class="list-item">
                   <i id="mixed-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="https://github.com/JuanIsturiz/Mixed-Messages" id="mixed-link" target="_blank">Mixed Messages</a> (<em>only Js</em>)</li>
+                  <li>
+                    <a
+                      href="https://github.com/JuanIsturiz/Mixed-Messages"
+                      id="mixed-link"
+                      target="_blank"
+                      >Mixed Messages</a
+                    >
+                    (<em>only Js</em>)
+                  </li>
                 </div>
                 <div class="list-item">
-                  <i id="mixed-html-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><a href="./other-projects/mixed-messages-with-html/index.html" id="mixed-html-link" target="_blank">Mixed Messages</a> (<em>with HTML included</em>)</li>
+                  <i
+                    id="mixed-html-arrow"
+                    class="fa-solid fa-arrow-right-long"
+                  ></i>
+                  <li>
+                    <a
+                      href="./other-projects/mixed-messages-with-html/index.html"
+                      id="mixed-html-link"
+                      target="_blank"
+                      >Mixed Messages</a
+                    >
+                    (<em>with HTML included</em>)
+                  </li>
                 </div>
                 <div class="list-item" id="portfolio">
-                  <i id="portfolio-arrow" class="fa-solid fa-arrow-right-long"></i>
-                  <li><p id="portfolio-link">Portfolio Webpage</p> (<em>currently where you are</em>)</li>
+                  <i
+                    id="portfolio-arrow"
+                    class="fa-solid fa-arrow-right-long"
+                  ></i>
+                  <li>
+                    <p id="portfolio-link">Portfolio Webpage</p>
+                    (<em>currently where you are</em>)
+                  </li>
                 </div>
               </ul>
             </div>
