changed the about me display to grid and added the freecodecamp js projects and personal projects list with the todo list in it

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <main>
       <section id="about-me">
         <div id="about-me-container">
+          <h2 id="about-me-header">About Me</h2>
           <div class="content">
             <div class="description">
-              <h2 id="about-me-header">About Me</h2>
               <p>
                 Hello I'm Juan Isturiz AKA: Dunkelnn, im 23 years old, I'm a
                 Software Engineer at the UBA from Venezuela. I'm currently
@@ -126,6 +126,19 @@
                     >
                   </li>
                 </div>
+                <div class="list-item">
+                  <i id="js-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li>
+                    <a
+                      href="https://github.com/JuanIsturiz/JavaScript-Algorithms-and-Data-Structures"
+                      id="js-link"
+                      target="_blank"
+                    >
+                      JavaScript Algorithms and Data Structures</a
+                    >
+                    (<em>only Js</em>)
+                  </li>
+                </div>
               </ul>
             </div>
             <div class="list-container">
@@ -166,6 +179,22 @@
                   <li>
                     <p id="portfolio-link">Portfolio Webpage</p>
                     (<em>currently where you are</em>)
+                  </li>
+                </div>
+              </ul>
+            </div>
+            <div class="list-container">
+              <h3>Personal Projects</h3>
+              <ul class="project-list">
+                <div class="list-item">
+                  <i id="todos-arrow" class="fa-solid fa-arrow-right-long"></i>
+                  <li>
+                    <a
+                      href="./other-projects/todos/index.html"
+                      id="todos-link"
+                      target="_blank"
+                      >Todos List</a
+                    >
                   </li>
                 </div>
               </ul>
